--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </header>
     <main>
       <nav>
-        <a class="link-nav" href="mysites.html"><b>мои лучшие работы</b></a>
+        <a class="link-nav" href="danil.html"><b>мои лучшие работы</b></a>
         <a class="link-nav" href="info.html"><b>полезная информация</b></a>
       </nav>
       <h1>Планы на<br/> лето</h1>
